# qiskit-addon-obp

./: .gitignore  .mergify.yml  CITATION.bib  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: citation.yml  coverage.yml  docs.yml  lint.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
docs/: conf.py  index.rst  install.rst
docs/_static/: dummy_visualization_metadata.json
docs/apidocs/: index.rst  qiskit_addon_obp.rst  qiskit_addon_obp.utils.metadata.rst  qiskit_addon_obp.utils.noise.rst  qiskit_addon_obp.utils.operations.rst  qiskit_addon_obp.utils.rst  qiskit_addon_obp.utils.simplify.rst  qiskit_addon_obp.utils.truncating.rst  qiskit_addon_obp.utils.visualization.rst
docs/guides/: bound_error_using_p_norm.ipynb  index.rst  overview.rst  quickstart.ipynb  simulating_circuits_with_obp.ipynb  truncate_operator_terms.ipynb
docs/how_tos/: bound_error_using_p_norm.ipynb  index.rst  quickstart-obp.ipynb  simulating_circuits_with_obp.ipynb  truncate_operator_terms.ipynb
docs/tutorials/: 01_getting_started.ipynb  index.rst
qiskit_addon_obp/: __init__.py  backpropagation.py  obp_estimator.py
qiskit_addon_obp/utils/: __init__.py  broadcast_indices_iter.py  lindblad_noise.py  metadata.py  noise.py  operations.py  simplify.py  truncating.py  visualization.py
releasenotes/notes/: add-param-to-hide-legend-d62ff17eef5e80f4.yaml  drop-python-3.9-a1b2c3d4e5f60718.yaml  fix-error-budget-distribution-d3c36a0c5155f153.yaml  fix-leaking-timeout-4447d52cf45ebdda.yaml  qiskit-2.0-d95668befd5151fc.yaml  remove-max-slices-0cd545f1aa18845d.yaml  rename-237b91e49e129762.yaml  reset-bugfix-9b601ba07e52e523.yaml  reset-bugfix-fec4bf4a951a6324.yaml  slice-bug-1aa7af1b87d4a9df.yaml  timeout-ac7ace81a091b314.yaml  tol-077b4d12aa30bc39.yaml  trunc-tol-a1c03cf32154e58f.yaml
releasenotes/notes/0.1/: fix-p-norm-8d6d12197ad10719.yaml  op-budget-0f0f0ee2033d385b.yaml  trunc-budget-class-4e61afb1df52272e.yaml
releasenotes/notes/0.2/: fix-num-duplicate-paulis-dcdf7c897fa8eaee.yaml  fix-num-unique-paulis-697f3fe22caefb38.yaml  trunc-tol-a1c03cf32154e58f.yaml
releasenotes/notes/0.3/: support-pauli-lindblad-error-04228c538f674877.yaml
test/: README.md  scratch.ipynb  test_backpropagation.py
test/utils/: __init__.py  test_layering.py  test_metadata.py  test_noise.py  test_operations.py  test_simplify.py  test_truncating.py
tools/: verify_images.py
