[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qiskit-addon-obp"
version = "0.2.0"
readme = "README.md"
description = "Reducing depth of circuits with operator backpropagation"
license = {file = "LICENSE.txt"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "qiskit>=1.2, <3",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "qiskit-addon-obp[test,doctest,nbtest,lint,docs]",
    "tox>=4.4.3",
]
basetest = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-subtests>=0.13",
    "qiskit-addon-utils",
]
test = [
    "qiskit-addon-obp[basetest]",
]
doctest = [
    "qiskit-addon-obp[basetest,notebook-dependencies]",
    "pytest-doctestplus>=1.2.1",
]
nbtest = [
    "qiskit-addon-obp[basetest]",
    "nbmake>=1.5.0",
]
style = [
    "ruff==0.9.9",
    "nbqa>=1.8.5",
    "typos>=1.20.0",
]
lint = [
    "qiskit-addon-obp[style]",
    "pylint==3.3.4",
    "mypy==1.15.0",
    "reno>=4.1",
]
notebook-dependencies = [
    "qiskit-addon-obp",
    "qiskit-addon-utils",
    "qiskit-ibm-runtime>=0.23",
    "rustworkx[graphviz]>=0.15",
    "ipywidgets",
    "pylatexenc",
]
docs = [
    "qiskit-addon-obp[doctest]",
    "qiskit-sphinx-theme~=2.0.0",
    "jupyter-sphinx",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-reredirects",
    "sphinx-copybutton",
    "nbsphinx>=0.9.4",
    "reno>=4.1",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.hatch.build.targets.wheel]
only-include = [
    "qiskit_addon_obp",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = 3.9
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.9"
load-plugins = [
    "pylint.extensions.no_self_use",
]

[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "reimported",
    "no-self-use",
    "no-else-raise",
    "redefined-argument-from-local",
    "redefined-builtin",
    "raise-missing-from",
    "cyclic-import",
    "unused-argument",
    "attribute-defined-outside-init",
    "no-else-return",
]

[tool.pytest.ini_options]
testpaths = ["./qiskit_addon_obp/", "./test/"]

[tool.ruff]
line-length = 100
src = ["qiskit_addon_obp", "test"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle
    "F",   # pyflakes
    "RUF", # ruff
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.extend-per-file-ignores]
"test/**.py" = [
    "D",  # pydocstyle
]
"docs/**/*" = [
    "E402", # module level import not at top of file
    "D100", # missing docstring in public module
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# This code is a Qiskit project.
#
# \\(C\\) Copyright IBM \\d{4}((,\\s)\\d{4})*\\.
#
# This code is licensed under the Apache License, Version 2\\.0\\. You may
# obtain a copy of this license in the LICENSE\\.txt file in the root directory
# of this source tree or at http\\:\\/\\/www\\.apache\\.org\\/licenses\\/LICENSE\\-2\\.0\\.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals\\.
"""

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.typos.default.extend-words]
IY = "IY"
aer = "aer"
